--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "@eslint/js": "^9.18.0",
     "@types/bn.js": "^5.1.6",
     "@types/crypto-js": "^4.2.2",
+    "@types/qrcode.react": "^1.0.5",
     "@types/three": "^0.172.0",
     "@typescript-eslint/eslint-plugin": "^8.21.0",
     "@typescript-eslint/parser": "^8.21.0",
