--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "private": true,
   "dependencies": {
     "@coral-xyz/anchor": "^0.30.1",
+    "@jup-ag/api": "^6.0.44",
     "@magicblock-labs/bolt-sdk": "^0.2.2",
     "@metaplex-foundation/mpl-token-metadata": "^3.3.0",
+    "@privy-io/react-auth": "^2.18.0",
     "@raydium-io/raydium-sdk": "^1.3.1-beta.58",
     "@solana/spl-token": "^0.4.8",
     "@solana/wallet-adapter-base": "^0.9.23",
@@ -34,11 +36,9 @@
     "react-router-dom": "^6.28.0",
     "react-scripts": "^5.0.1",
     "react-tooltip": "^5.28.0",
-    "@privy-io/react-auth": "^2.18.0",
     "three": "^0.172.0",
     "typescript": "^5.4.3",
-    "web-vitals": "^2.1.4",
-    "@jup-ag/api": "^6.0.44"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-app-rewired start",
